infra/k8s/web/web.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-planner-web-ingress
  namespace: planner
spec:
  rules: 
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: travel-planner-web-service
                port:
                  number: 80
